--- a/0_Prueba_con_envio_automatico.html
+++ b/0_Prueba_con_envio_automatico.html
@@ -11,7 +11,7 @@
     #answer, #student-name { font-size: 18px; padding: 8px; width: 300px; }
     #submit, #start-button, #send-teacher { font-size: 18px; padding: 8px 16px; margin-top: 10px; }
     #feedback { margin-top: 20px; font-size: 18px; }
-    #grade { margin-top: 6px; font-size: 18px; font-weight: bold; display: none; } /* Nota oculta durante el ejercicio */
+    #grade { margin-top: 6px; font-size: 18px; font-weight: bold; display: none; }
     #correct-answers { margin-top: 10px; font-size: 16px; color: gray; }
     #hint { margin-top: 10px; font-size: 16px; color: gray; }
     #summary { margin-top: 30px; text-align: left; width: 60%; margin-left: auto; margin-right: auto; }
@@ -32,51 +32,34 @@
     <div id="instructions">Instrucciones: Escribe el femenino de los siguientes sintagmas. EJEMPLO: PREGUNTA: el joven RESPUESTA: la joven</div>
     <div id="progress-line">
       <div id="progress"></div>
-      <div id="score"></div>   <!-- Solo aciertos/errores, sin nota -->
+      <div id="score"></div>
     </div>
     <div id="question"></div>
     <input type="text" id="answer" placeholder="Escribe aquí">
     <br>
     <button id="submit" onclick="buttonAction()" disabled>Enviar</button>
     <div id="feedback"></div>
-    <div id="grade"></div> <!-- Nota solo al finalizar -->
+    <div id="grade"></div>
     <div id="correct-answers"></div>
     <div id="hint"></div>
     <div id="summary"></div>
 
-    <!-- Botón opcional para enviar al profesor -->
+    <!-- Botón para enviar al profesor -->
     <button id="send-teacher" style="display:none; margin-top: 16px;">Enviar al profesor</button>
   </div>
 
   <script>
-    // URL de tu Web App (SIN /a/)
-    const WEBHOOK_URL = "https://script.google.com/macros/s/AKfycbxSlo-Ri5lp1L4Tt4PtjgRy8rKdNqKb_LfDTzBi78uS3GAZw0chgxZy2RIos038I4Yq-g/exec";
+    // === Configuración del ejercicio/título ===
+    const EXERCISE_TITLE = (document.getElementById('exercise-h1')?.textContent || document.title || "Ejercicio").trim();
+
+    // URL del Web App (SIN /a/) + título en querystring (cinturón #3)
+    const WEBHOOK_URL_BASE = "https://script.google.com/macros/s/AKfycbxSlo-Ri5lp1L4Tt4PtjgRy8rKdNqKb_LfDTzBi78uS3GAZw0chgxZy2RIos038I4Yq-g/exec";
+    const WEBHOOK_URL = `${WEBHOOK_URL_BASE}?title=${encodeURIComponent(EXERCISE_TITLE)}`;
 
     // % con 1 decimal
     function computePercent() {
       const total = totalCorrect + totalErrors;
       return total === 0 ? 0 : Math.round((totalCorrect / total) * 1000) / 10;
-    }
-
-    // Lee el título desde el H1 (fallback: <title>)
-    function getExerciseTitle() {
-      const h1 = document.getElementById('exercise-h1');
-      const byH1 = h1 && h1.textContent ? h1.textContent.trim() : "";
-      return byH1 || document.title || "Ejercicio";
-    }
-
-    // Construye payload
-    function buildResultsPayload() {
-      const exerciseTitle = getExerciseTitle();
-      return {
-        exerciseTitle,                 // en payload
-        title: exerciseTitle,          // alias en payload
-        studentName,
-        totalCorrect,
-        totalErrors,
-        percentCorrect: computePercent(),
-        errorList: buildUniqueErrorList()
-      };
     }
 
     function buildUniqueErrorList() {
@@ -91,15 +74,26 @@
       return uniqueErrorList;
     }
 
-    // Envío sin preflight: application/x-www-form-urlencoded
+    // Payload (cinturón #1 y #2)
+    function buildResultsPayload() {
+      return {
+        exerciseTitle: EXERCISE_TITLE,      // payload
+        title: EXERCISE_TITLE,              // alias en payload
+        studentName,
+        totalCorrect,
+        totalErrors,
+        percentCorrect: computePercent(),
+        errorList: buildUniqueErrorList()
+      };
+    }
+
+    // Envío como application/x-www-form-urlencoded (simple request)
     async function sendResultsToTeacher(payload) {
       const el = document.getElementById('summary');
       try {
         const form = new URLSearchParams();
-        // Campo principal (JSON)
         form.append("payload", JSON.stringify(payload));
-        // Redundancia explícita (para e.parameter.* en el servidor)
-        form.append("exerciseTitle", payload.exerciseTitle);
+        form.append("exerciseTitle", payload.exerciseTitle); // campos extra
         form.append("title", payload.title);
 
         const res = await fetch(WEBHOOK_URL, {
@@ -121,10 +115,11 @@
           : "⚠️ No se pudieron enviar los resultados automáticamente.";
         el.appendChild(nota);
 
-        // (Opcional) Muestra en consola el título que el servidor asegura haber recibido
-        if (data && data.receivedTitle) {
-          console.log("Servidor recibió título:", data.receivedTitle);
-        }
+        // Mostrar explícitamente qué título recibió el servidor (visible para ti)
+        const info = document.createElement('p');
+        info.style.color = '#333';
+        info.textContent = `Título confirmado por el servidor: ${data.receivedTitle || 'No recibido'}`;
+        el.appendChild(info);
 
         return ok;
       } catch (e) {
@@ -152,7 +147,7 @@
       }
     }
 
-    // === Lógica del ejercicio ===
+    // === Lógica del ejercicio (sin cambios funcionales salvo la nota solo al final) ===
     const allQuestions = {
       "el niño": ["la niña"],
       "el pasajero": ["la pasajera"],
@@ -189,7 +184,6 @@
       document.getElementById('start-screen').style.display = 'none';
       document.getElementById('exercise').style.display = '';
 
-      // Ocultar nota mientras se trabaja
       const gradeEl = document.getElementById('grade');
       gradeEl.style.display = 'none';
       gradeEl.innerText = '';
@@ -216,7 +210,6 @@
           document.getElementById('submit').disabled = false;
           document.getElementById('submit').style.display = '';
           document.getElementById('feedback').innerText = '';
-          // Ocultar nota mientras se trabaja
           const gradeEl = document.getElementById('grade');
           gradeEl.style.display = 'none';
           gradeEl.innerText = '';
@@ -235,7 +228,6 @@
         document.getElementById('answer').disabled = false;
         document.getElementById('answer').style.display = '';
         document.getElementById('feedback').innerText = '';
-        // Ocultar nota mientras se trabaja
         const gradeEl = document.getElementById('grade');
         gradeEl.style.display = 'none';
         gradeEl.innerText = '';
@@ -283,7 +275,7 @@
       document.getElementById('correct-answers').innerText = '';
       document.getElementById('hint').innerText = '';
 
-      // Mostrar nota final SOLO aquí
+      // Nota final SOLO aquí
       const gradeEl = document.getElementById('grade');
       gradeEl.style.display = 'block';
       gradeEl.innerText = `Nota: ${computePercent()}%`;
@@ -304,7 +296,7 @@
         document.getElementById('summary').innerHTML = "<h3>Errores cometidos durante el ejercicio:</h3><p>Ninguno</p>";
       }
 
-      // Mostrar el botón “Enviar al profesor”
+      // Botón “Enviar al profesor”
       const sendBtn = document.getElementById('send-teacher');
       sendBtn.style.display = 'inline-block';
       sendBtn.disabled = false;
