--- a/1_2_1_Numeros_1_0-15.html
+++ b/1_2_1_Numeros_1_0-15.html
@@ -1,1 +1,375 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Números: 0-15</title>
+  <style>
+    body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; background-color: #d0d0d0; }
+    #instructions, #start-screen h2 { font-size: 18px; margin-bottom: 20px; }
+    #progress-line { display: flex; justify-content: center; gap: 30px; margin-bottom: 10px; font-size: 18px; color: gray; }
+    #question { font-size: 24px; margin-bottom: 10px; }
+    #answer, #student-name { font-size: 18px; padding: 8px; width: 300px; }
+    #submit, #start-button, #send-teacher { font-size: 18px; padding: 8px 16px; margin-top: 10px; }
+    #feedback { margin-top: 20px; font-size: 18px; }
+    #grade { margin-top: 6px; font-size: 18px; font-weight: bold; display: none; } /* Nota oculta durante el ejercicio */
+    #correct-answers { margin-top: 10px; font-size: 16px; color: gray; }
+    #hint { margin-top: 10px; font-size: 16px; color: gray; }
+    #summary { margin-top: 30px; text-align: left; width: 60%; margin-left: auto; margin-right: auto; }
+  </style>
+</head>
+<body>
 
+  <h1 id="exercise-h1">Números: 0-15</h1>
+
+  <div id="start-screen">
+    <h2>Por favor, escribe tu nombre para comenzar:</h2>
+    <input type="text" id="student-name" placeholder="Tu nombre">
+    <br>
+    <button id="start-button" onclick="startExercise()" disabled>Comenzar</button>
+  </div>
+
+  <div id="exercise" style="display: none;">
+    <div id="instructions">Instrucciones: Escribe el femenino de los siguientes sintagmas. EJEMPLO: PREGUNTA: el joven RESPUESTA: la joven</div>
+    <div id="progress-line">
+      <div id="progress"></div>
+      <div id="score"></div>   <!-- Solo aciertos/errores, sin nota -->
+    </div>
+    <div id="question"></div>
+    <input type="text" id="answer" placeholder="Escribe aquí">
+    <br>
+    <button id="submit" onclick="buttonAction()" disabled>Enviar</button>
+    <div id="feedback"></div>
+    <div id="grade"></div> <!-- Nota solo al finalizar -->
+    <div id="correct-answers"></div>
+    <div id="hint"></div>
+    <div id="summary"></div>
+
+    <!-- Botón opcional para enviar al profesor -->
+    <button id="send-teacher" style="display:none; margin-top: 16px;">Enviar al profesor</button>
+  </div>
+
+  <script>
+    // === Título del ejercicio ===
+    const EXERCISE_TITLE = (document.getElementById('exercise-h1')?.textContent || document.title || "Ejercicio").trim();
+
+    // === URL del Web App (SIN /a/) + título en querystring (cinturón extra) ===
+    const WEBHOOK_URL_BASE = "https://script.google.com/macros/s/AKfycbxGqBTWLZFL2J0Y_tZ0mZ3xmGKVsI_UdIX2ZQhZizPDKFYfAPLrna7XJ0222sNw_88QtQ/exec";
+    const WEBHOOK_URL = `${WEBHOOK_URL_BASE}?title=${encodeURIComponent(EXERCISE_TITLE)}`;
+
+    // === % con 1 decimal ===
+    function computePercent() {
+      const total = totalCorrect + totalErrors;
+      return total === 0 ? 0 : Math.round((totalCorrect / total) * 1000) / 10;
+    }
+
+    function buildUniqueErrorList() {
+      const seen = new Set();
+      const uniqueErrorList = [];
+      errorDetails.forEach(({ question, answers }) => {
+        if (!seen.has(question)) {
+          seen.add(question);
+          uniqueErrorList.push(`${question} → correctas: ${answers.join(" / ")}`);
+        }
+      });
+      return uniqueErrorList;
+    }
+
+    // === Payload completo para el servidor ===
+    function buildResultsPayload() {
+      const percent = computePercent();
+      const subject = `Resultados: ${EXERCISE_TITLE} - ${studentName}`;
+      const body =
+`Título del ejercicio: ${EXERCISE_TITLE}
+Nombre del estudiante: ${studentName}
+Número de aciertos: ${totalCorrect}
+Número de errores: ${totalErrors}
+% de aciertos: ${percent}%
+
+${buildUniqueErrorList().length ? "Lista de errores:\n- " + buildUniqueErrorList().join("\n- ") : "Lista de errores:\nNinguno"}
+`;
+      return {
+        // Título por duplicado
+        exerciseTitle: EXERCISE_TITLE,
+        title: EXERCISE_TITLE,
+        // Datos
+        studentName,
+        totalCorrect,
+        totalErrors,
+        percentCorrect: percent,
+        errorList: buildUniqueErrorList(),
+        // Asunto y cuerpo listos (serán PRIORIDAD en el servidor)
+        subject,
+        body
+      };
+    }
+
+    // === Envío como application/x-www-form-urlencoded (simple request) ===
+    async function sendResultsToTeacher(payload) {
+      const el = document.getElementById('summary');
+      try {
+        const form = new URLSearchParams();
+        // Principal
+        form.append("payload", JSON.stringify(payload));
+        // Redundancias (por si el payload no se parsea)
+        form.append("exerciseTitle", payload.exerciseTitle);
+        form.append("title", payload.title);
+        // “Seguro extra”: también mandamos subject/body sueltos
+        form.append("subject", payload.subject);
+        form.append("body", payload.body);
+
+        const res = await fetch(WEBHOOK_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/x-www-form-urlencoded;charset=UTF-8" },
+          body: form.toString()
+        });
+
+        const text = await res.text();
+        let data = {};
+        try { data = JSON.parse(text); } catch(_) {}
+        console.log("Respuesta servidor:", text);
+
+        const ok = !!(data && data.ok);
+
+        const nota = document.createElement('p');
+        nota.style.color = ok ? 'green' : 'red';
+        nota.textContent = ok
+          ? `✅ Resultados enviados al profesor.`
+          : "⚠️ No se pudieron enviar los resultados automáticamente.";
+        el.appendChild(nota);
+
+        // Mostrar qué título/asunto usó el servidor
+        const info = document.createElement('p');
+        info.style.color = '#333';
+        info.textContent = `Título confirmado: ${data.receivedTitle || 'No recibido'} · Asunto usado: ${data.receivedSubject || 'N/D'}`;
+        el.appendChild(info);
+
+        return ok;
+      } catch (e) {
+        console.error("Error al enviar resultados:", e);
+        const nota = document.createElement('p');
+        nota.style.color = 'red';
+        nota.textContent = "⚠️ No se pudieron enviar los resultados automáticamente.";
+        el.appendChild(nota);
+        return false;
+      }
+    }
+
+    async function handleSendToTeacher() {
+      const btn = document.getElementById('send-teacher');
+      const originalText = btn.textContent;
+      btn.disabled = true;
+      btn.textContent = "Enviando…";
+
+      const ok = await sendResultsToTeacher(buildResultsPayload());
+      if (ok) {
+        btn.textContent = "Enviado ✅";
+      } else {
+        btn.textContent = originalText;
+        btn.disabled = false; // permitir reintento
+      }
+    }
+
+    // === Lógica del ejercicio ===
+    const allQuestions = {
+      "el niño": ["la niña"],
+      "el pasajero": ["la pasajera"],
+      "un estudiante": ["una estudiante"],
+      "un turista": ["una turista"],
+      "el hombre": ["la mujer"],
+      "el conductor": ["la conductora"],
+      "un profesor": ["una profesora"],
+      "un chico": ["una chica"]
+    };
+
+    let fullQuestionList = Object.keys(allQuestions);
+    let currentAnswers = [];
+    let errors = [];
+    let errorDetails = [];
+    let totalErrors = 0;
+    let totalCorrect = 0;
+    let phase = 'normal';
+    let index = 0;
+    let currentQuestion = '';
+    let waitingToContinue = false;
+    let studentName = '';
+
+    function shuffleArray(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+    }
+
+    function startExercise() {
+      studentName = document.getElementById('student-name').value.trim();
+      shuffleArray(fullQuestionList);
+      document.getElementById('start-screen').style.display = 'none';
+      document.getElementById('exercise').style.display = '';
+
+      // Ocultar nota mientras se trabaja
+      const gradeEl = document.getElementById('grade');
+      gradeEl.style.display = 'none';
+      gradeEl.innerText = '';
+
+      pickQuestion();
+    }
+
+    function updateProgress() {
+      const currentNumber = index + 1;
+      const total = fullQuestionList.length;
+      document.getElementById('progress').innerText = `Pregunta ${currentNumber} de ${total}`;
+      document.getElementById('score').innerText =
+        `Aciertos: ${totalCorrect} · Errores: ${totalErrors}`;
+    }
+
+    function pickQuestion() {
+      if (index >= fullQuestionList.length) {
+        if (errors.length === 0) {
+          showCompletion();
+        } else {
+          document.getElementById('question').innerText = '¡Vamos a corregir los errores!';
+          document.getElementById('answer').style.display = 'none';
+          document.getElementById('submit').innerText = 'Continuar';
+          document.getElementById('submit').disabled = false;
+          document.getElementById('submit').style.display = '';
+          document.getElementById('feedback').innerText = '';
+          const gradeEl = document.getElementById('grade');
+          gradeEl.style.display = 'none';
+          gradeEl.innerText = '';
+          document.getElementById('correct-answers').innerText = '';
+          document.getElementById('hint').innerText = 'Pulsa ENTER o haz clic en CONTINUAR';
+          document.getElementById('summary').innerHTML = '';
+          waitingToContinue = true;
+          phase = 'prepare_review';
+          return;
+        }
+      } else {
+        currentQuestion = fullQuestionList[index];
+        currentAnswers = allQuestions[currentQuestion];
+        document.getElementById('question').innerText = currentQuestion;
+        document.getElementById('answer').value = '';
+        document.getElementById('answer').disabled = false;
+        document.getElementById('answer').style.display = '';
+        document.getElementById('feedback').innerText = '';
+        const gradeEl = document.getElementById('grade');
+        gradeEl.style.display = 'none';
+        gradeEl.innerText = '';
+        document.getElementById('correct-answers').innerText = '';
+        document.getElementById('hint').innerText = '';
+        document.getElementById('submit').innerText = 'Enviar';
+        document.getElementById('submit').disabled = true;
+        document.getElementById('submit').style.display = '';
+        waitingToContinue = false;
+        updateProgress();
+        document.getElementById('answer').focus();
+      }
+    }
+
+    function checkAnswer() {
+      const userAnswer = document.getElementById('answer').value.trim();
+      const correct = currentAnswers.some(ans => ans === userAnswer);
+      if (correct) {
+        totalCorrect++;
+        document.getElementById('feedback').innerText = "✅ ¡Correcto!";
+        document.getElementById('feedback').style.color = "green";
+      } else {
+        document.getElementById('feedback').innerText = "❌ Incorrecto.";
+        document.getElementById('feedback').style.color = "red";
+        totalErrors++;
+        errors.push(currentQuestion);
+        errorDetails.push({ question: currentQuestion, answers: currentAnswers });
+      }
+
+      document.getElementById('correct-answers').innerText = "Respuestas posibles: " + currentAnswers.join(" / ");
+      document.getElementById('submit').innerText = 'Continuar';
+      document.getElementById('answer').disabled = true;
+      document.getElementById('submit').disabled = false;
+      document.getElementById('hint').innerText = 'Pulsa ENTER o haz clic en CONTINUAR';
+      waitingToContinue = true;
+      updateProgress();
+    }
+
+    function showCompletion() {
+      document.getElementById('progress-line').style.display = 'none';
+      document.getElementById('question').innerText = `¡Felicitaciones, ${studentName}! Terminaste el ejercicio.`;
+      document.getElementById('answer').style.display = 'none';
+      document.getElementById('submit').style.display = 'none';
+      document.getElementById('feedback').innerText = `Aciertos: ${totalCorrect} · Errores: ${totalErrors}`;
+      document.getElementById('correct-answers').innerText = '';
+      document.getElementById('hint').innerText = '';
+
+      // Nota final SOLO aquí
+      const gradeEl = document.getElementById('grade');
+      gradeEl.style.display = 'block';
+      gradeEl.innerText = `Nota: ${computePercent()}%`;
+
+      // Resumen de errores únicos
+      if (errorDetails.length > 0) {
+        const seen = new Set();
+        let summaryHTML = "<h3>Errores cometidos durante el ejercicio:</h3><ul>";
+        errorDetails.forEach(entry => {
+          if (!seen.has(entry.question)) {
+            seen.add(entry.question);
+            summaryHTML += `<li><strong>${entry.question}</strong><br>Respuestas correctas: ${entry.answers.join(", ")}</li>`;
+          }
+        });
+        summaryHTML += "</ul>";
+        document.getElementById('summary').innerHTML = summaryHTML;
+      } else {
+        document.getElementById('summary').innerHTML = "<h3>Errores cometidos durante el ejercicio:</h3><p>Ninguno</p>";
+      }
+
+      // Botón “Enviar al profesor”
+      const sendBtn = document.getElementById('send-teacher');
+      sendBtn.style.display = 'inline-block';
+      sendBtn.disabled = false;
+      sendBtn.textContent = 'Enviar al profesor';
+    }
+
+    function buttonAction() {
+      if (!waitingToContinue) {
+        checkAnswer();
+      } else {
+        if (phase === 'prepare_review') {
+          phase = 'review';
+          fullQuestionList = [...errors];
+          errors = [];
+          index = 0;
+          waitingToContinue = false;
+          pickQuestion();
+        } else {
+          index++;
+          pickQuestion();
+        }
+      }
+    }
+
+    document.addEventListener('keydown', function(event) {
+      if (event.key === 'Enter') {
+        event.preventDefault();
+        if (document.getElementById('start-screen').style.display !== 'none') {
+          if (!document.getElementById('start-button').disabled) startExercise();
+        } else if (!document.getElementById('submit').disabled) {
+          buttonAction();
+        }
+      }
+    });
+
+    document.getElementById('answer').addEventListener('input', function () {
+      const inputContent = document.getElementById('answer').value.trim();
+      if (!waitingToContinue) {
+        document.getElementById('submit').disabled = inputContent === '';
+      }
+    });
+
+    document.getElementById('student-name').addEventListener('input', function () {
+      const inputName = document.getElementById('student-name').value.trim();
+      document.getElementById('start-button').disabled = inputName === '';
+    });
+
+    // Click en “Enviar al profesor”
+    document.getElementById('send-teacher').addEventListener('click', handleSendToTeacher);
+  </script>
+
+</body>
+</html>
