--- a/1_2_1_Numeros_1_0_15.html
+++ b/1_2_1_Numeros_1_0_15.html
@@ -178,6 +178,12 @@ ${buildUniqueErrorList().length ? "Lista de errores:\n- " + buildUniqueErrorList
       "el hombre": ["la mujer"],
       "el conductor": ["la conductora"],
       "un profesor": ["una profesora"],
+      "el pasajero": ["la pasajera"],
+      "un estudiante": ["una estudiante"],
+      "un turista": ["una turista"],
+      "el hombre": ["la mujer"],
+      "el conductor": ["la conductora"],
+      "un profesor": ["una profesora"],
       "un chico": ["una chica"]
     };
 
