--- a/1_2_5_Silabas_1.html
+++ b/1_2_5_Silabas_1.html
@@ -96,7 +96,7 @@
       "diecinueve": ["die ci nue ve"],
       "caoba": ["ca o ba"],
       "veis": ["veis"],
-      "tío": ["tí-o"]
+      "tío": ["tí o"]
     };
 
     let fullQuestionList = Object.keys(allQuestions);
