--- a/1_2_3_Numeros_3_preguntas.html
+++ b/1_2_3_Numeros_3_preguntas.html
@@ -61,7 +61,7 @@
 </head>
 <body>
 
-  <h1>Números 2: 16-30</h1>
+  <h1>Números 3: Preguntas</h1>
 
   <div id="start-screen">
     <h2>Por favor, escribe tu nombre para comenzar:</h2>
