--- a/1_2_3_Numeros_3_preguntas.html
+++ b/1_2_3_Numeros_3_preguntas.html
@@ -94,7 +94,7 @@
       "¿Cuántos conductores hay en el autobús? (1)": ["Hay un conductor en el autobús."],
       "¿Cuántos países hay en el mapa? (26)": ["Hay veintiséis países en el mapa."],
       "¿Cuántas mujeres hay en la comunidad? (13)": ["Hay trece mujeres en la comunidad."],
-      "Cuántos pasajeros hay en el autobús? (15)": ["Hay quince pasajeros en el autobús."]
+      "¿Cuántos pasajeros hay en el autobús? (15)": ["Hay quince pasajeros en el autobús."]
     };
 
     let fullQuestionList = Object.keys(allQuestions);
