--- a/1_3_2_Pronombres_SER_2_traduccion.html
+++ b/1_3_2_Pronombres_SER_2_traduccion.html
@@ -88,13 +88,17 @@
 
   <script>
     const allQuestions = {
-         "¿Cuántas chicas hay en la foto? (21)": ["Hay veintiuna chicas en la foto."],
-      "¿Cuántos chicos hay en la foto? (21)": ["Hay veintiún chicos en la foto."],
-      "¿Cuántas computadoras hay en la maleta? (1)": ["Hay una computadora en la maleta."],
-      "¿Cuántos conductores hay en el autobús? (1)": ["Hay un conductor en el autobús."],
-      "¿Cuántos países hay en el mapa? (26)": ["Hay veintiséis países en el mapa."],
-      "¿Cuántas mujeres hay en la comunidad? (13)": ["Hay trece mujeres en la comunidad."],
-      "¿Cuántos pasajeros hay en el autobús? (15)": ["Hay quince pasajeros en el autobús."]
+         "She is from Honduras.": ["Ella es de Honduras."],
+      "I am from Cuba.": ["Soy de Cuba.", "Yo soy de Cuba."],
+      "You (singular) are a professor.": ["Tú eres profesor.", "Eres profesor."],
+      "You (plural, informal, Spain) are singers.": ["Vosotros sois cantantes.", "Sois cantantes."],
+      "We are students.": ["Somos estudiantes.", "Nosotros somos estudiantes."],
+      "They (feminine) are actresses.": ["Ellas son actrices."],
+      "You (general, Spanish America) are from Venezuela.": ["Ustedes son de Venezuela."],
+      "You (plural, formal, Spain) are from Bolivia.": ["Ustedes son de Bolivia."],
+      "It is a map.": ["Es un mapa."],
+      "They (masculine) are athletes.": ["Ellos son deportistas."]
+      
     };
 
     let fullQuestionList = Object.keys(allQuestions);
