--- a/1_3_2_Pronombres_SER_2_traduccion.html
+++ b/1_3_2_Pronombres_SER_2_traduccion.html
@@ -90,7 +90,7 @@
     const allQuestions = {
          "She is from Honduras.": ["Ella es de Honduras."],
       "I am from Cuba.": ["Soy de Cuba.", "Yo soy de Cuba."],
-      "You (singular) are a professor.": ["Tú eres profesor.", "Eres profesor."],
+      "You (singular) are a musician.": ["Tú eres músico.", "Eres músico."],
       "You (plural, informal, Spain) are singers.": ["Vosotros sois cantantes.", "Sois cantantes."],
       "We are students.": ["Somos estudiantes.", "Nosotros somos estudiantes."],
       "They (feminine) are actresses.": ["Ellas son actrices."],
