--- a/1_3_2_Pronombres_SER_2_traduccion.html
+++ b/1_3_2_Pronombres_SER_2_traduccion.html
@@ -90,14 +90,14 @@
     const allQuestions = {
          "She is from Honduras.": ["Ella es de Honduras."],
       "I am from Cuba.": ["Soy de Cuba.", "Yo soy de Cuba."],
-      "You (singular) are a musician.": ["Tú eres músico.", "Eres músico."],
-      "You (plural, informal, Spain) are singers.": ["Vosotros sois cantantes.", "Sois cantantes."],
+      "You (singular) are a musician.": ["Tú eres músico.", "Eres músico.", "Tú eres música.", "Eres música."],
+      "You (plural, informal, Spain) are singers.": ["Vosotros sois cantantes.", "Sois cantantes.", "Vosotras sois cantantes."],
       "We are students.": ["Somos estudiantes.", "Nosotros somos estudiantes."],
       "They (feminine) are actresses.": ["Ellas son actrices."],
       "You (general, Spanish America) are from Venezuela.": ["Ustedes son de Venezuela."],
       "You (plural, formal, Spain) are from Bolivia.": ["Ustedes son de Bolivia."],
       "It is a map.": ["Es un mapa."],
-      "They (masculine) are athletes.": ["Ellos son deportistas."]
+      "They (masculine) are athletes.": ["Ellos son deportistas.", "Ellos son atletas."]
       
     };
 
