--- a/1_3_1_Pronombres_SER_1.html
+++ b/1_3_1_Pronombres_SER_1.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Números 3: Preguntas</title>
+  <title>Pronombres personales y verbo SER 1</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -61,7 +61,7 @@
 </head>
 <body>
 
-  <h1>Números 3: Preguntas</h1>
+  <h1>Pronombres personales y verbo SER 1</h1>
 
   <div id="start-screen">
     <h2>Por favor, escribe tu nombre para comenzar:</h2>
@@ -71,7 +71,7 @@
   </div>
 
   <div id="exercise" style="display: none;">
-    <div id="instructions">Instrucciones: Contesta la pregunta./Answer the question. EJEMPLO: PREGUNTA: ¿Cuántos estudiantes hay en el autobús? (5) RESPUESTA: Hay cinco estudiantes en el autobús.</div>
+    <div id="instructions">Instrucciones: Llena los espacios en blanco con la forma correcta del verbo SER. EJEMPLO: PREGUNTA: Yo _____ de Cuba. RESPUESTA: soy</div>
     <div id="progress-line">
       <div id="progress"></div>
       <div id="score"></div>
