--- a/1_3_2_Pronombres_SER_2_traduccion.html
+++ b/1_3_2_Pronombres_SER_2_traduccion.html
@@ -91,13 +91,13 @@
          "She is from Honduras.": ["Ella es de Honduras."],
       "I am from Cuba.": ["Soy de Cuba.", "Yo soy de Cuba."],
       "You (singular) are a musician.": ["Tú eres músico.", "Eres músico.", "Tú eres música.", "Eres música."],
-      "You (plural, informal, Spain) are singers.": ["Vosotros sois cantantes.", "Sois cantantes.", "Vosotras sois cantantes."],
+      "You (plural, informal, España) are singers.": ["Vosotros sois cantantes.", "Sois cantantes.", "Vosotras sois cantantes."],
       "We are students.": ["Somos estudiantes.", "Nosotros somos estudiantes."],
-      "They (feminine) are actresses.": ["Ellas son actrices."],
-      "You (general, Spanish America) are from Venezuela.": ["Ustedes son de Venezuela."],
-      "You (plural, formal, Spain) are from Bolivia.": ["Ustedes son de Bolivia."],
+      "They (feminino) are actresses.": ["Ellas son actrices."],
+      "You (plural, general, Hispanoamérica) are from Venezuela.": ["Ustedes son de Venezuela."],
+      "You (plural, formal, España) are from Bolivia.": ["Ustedes son de Bolivia."],
       "It is a map.": ["Es un mapa."],
-      "They (masculine) are athletes.": ["Ellos son deportistas.", "Ellos son atletas."]
+      "They (masculino) are athletes.": ["Ellos son deportistas.", "Ellos son atletas."]
       
     };
 
