--- a/1_3_1_Pronombres_SER_1.html
+++ b/1_3_1_Pronombres_SER_1.html
@@ -97,7 +97,7 @@
       "Vosotros ___ de Ecuador.": ["sois"],
       "Nosotros ___ deportistas.": ["somos"],
       "Lucía y yo ___ músicos.": ["somos"],
-      "Tú y ella ___ son de Guatemala.": ["son"],
+      "Tú y ella ___ de Guatemala.": ["son"],
       "___ una comunidad.": ["Es"],
       "___ el cuaderno de Jesús.": ["Es"],
       "___ los lápices de Juan.": ["Son"],
