--- a/1_3_2_Pronombres_SER_2_traduccion.html
+++ b/1_3_2_Pronombres_SER_2_traduccion.html
@@ -97,6 +97,7 @@
       "You (plural, general, Hispanoamérica) are from Venezuela.": ["Ustedes son de Venezuela."],
       "You (plural, formal, España) are from Bolivia.": ["Ustedes son de Bolivia."],
       "It is a map.": ["Es un mapa."],
+      "She is an excellent teacher.": ["Ella es una profesora excelente."],
       "They (masculino) are athletes.": ["Ellos son deportistas.", "Ellos son atletas."]
       
     };
