--- a/1_3_2_Pronombres_SER_2_traduccion.html
+++ b/1_3_2_Pronombres_SER_2_traduccion.html
@@ -93,7 +93,7 @@
       "You (singular) are a musician.": ["Tú eres músico.", "Eres músico.", "Tú eres música.", "Eres música."],
       "You (plural, informal, España) are singers.": ["Vosotros sois cantantes.", "Sois cantantes.", "Vosotras sois cantantes."],
       "We are students.": ["Somos estudiantes.", "Nosotros somos estudiantes."],
-      "They (feminino) are actresses.": ["Ellas son actrices."],
+      "They (femenino) are actresses.": ["Ellas son actrices."],
       "You (plural, general, Hispanoamérica) are from Venezuela.": ["Ustedes son de Venezuela."],
       "You (plural, formal, España) are from Bolivia.": ["Ustedes son de Bolivia."],
       "It is a map.": ["Es un mapa."],
